feat(2models): add the two first models sections

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -10,7 +10,7 @@ The presentation of the host organization and the context and challenges of the 
 \section{Project Context}
 
 This work is part of the end-of-study project for the national diploma of Applied Bachelor's degree in Computer Science from the Higher Institute of Computer Science and Mathematics of Monastir (ISIMM) for the year 2024/2025. we has the opportunity to do our end-of-study internship at the company
-``KZ IT Services'', under the supervision of Mr. Khalil Zouari.
+<< KZ IT Services >>, under the supervision of Mr. Khalil Zouari.
 
 \section{Hosting Company}
 
@@ -19,7 +19,7 @@ The purpose of this section is to present the company within which I developed m
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=0.2\textwidth]{images/company-logo.png}
-    \caption{Hosting Company ``KZ IT Services''}
+    \caption{Hosting Company << KZ IT Services >>}
     \label{fig:hosting-company}
 \end{figure}
 
@@ -55,7 +55,7 @@ The purpose of this section is to present the company within which I developed m
     \end{tabular}
 \end{table}
 
-\textbf{\textcolor{primary}{``KZ IT Services''}} is a dynamic software company dedicated to delivering innovative IT solutions tailored to modern business needs. they are specialize in designing and developing robust, scalable applications that drive efficiency and digital transformation. thier experienced team leverages cutting-edge technology to create customized software that exceeds client expectations. With a strong commitment to quality and continuous improvement, they build lasting partnerships based on trust and excellence. At ``KZ IT Service'', innovation is at the core of everything they do, empowering thier clients to achieve sustainable growth and success.
+\textbf{\textcolor{primary}{KZ IT Services}} is a dynamic software company dedicated to delivering innovative IT solutions tailored to modern business needs. they are specialize in designing and developing robust, scalable applications that drive efficiency and digital transformation. thier experienced team leverages cutting-edge technology to create customized software that exceeds client expectations. With a strong commitment to quality and continuous improvement, they build lasting partnerships based on trust and excellence. At << KZ IT Services >>, innovation is at the core of everything they do, empowering thier clients to achieve sustainable growth and success.
 
 \section{Preliminary Study}
 
@@ -63,7 +63,7 @@ This preliminary study provides a review of some existing investment and asset m
 
 \subsection{Existing Solutions Study}
 
-After conducting extensive research on investment platforms similar to our concept across the global market, we carefully analyzed numerous applications based on their performance metrics and market position. From this comprehensive study, we specifically selected ``Aseel'' \cite{AssilEyeInstitute} and ``Stake'' \cite{StakeWebsite} for in-depth analysis \cite{G2CompetitiveAnalysis2024, AsanaCompetitiveAnalysis2024} due to their exceptional performance and status as leading companies in the real estate investment platform sector.
+After conducting extensive research on investment platforms similar to our concept across the global market, we carefully analyzed numerous applications based on their performance metrics and market position. From this comprehensive study, we specifically selected << Aseel >> \cite{AssilEyeInstitute} and << Stake >> \cite{StakeWebsite} for in-depth analysis \cite{G2CompetitiveAnalysis2024, AsanaCompetitiveAnalysis2024} due to their exceptional performance and status as leading companies in the real estate investment platform sector.
 
 \subsubsection{The Aseel Platform}
 
@@ -77,7 +77,7 @@ the details of the properties, and then make an informed decision. Aseel introdu
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=0.65\textwidth]{images/Interface-of-the Aseel Platform.png}
-    \caption{Interface of ``The Aseel Platform''}
+    \caption{Interface of << The Aseel Platform >>}
     \label{fig:aseel-platform}
 \end{figure}
 
@@ -103,7 +103,7 @@ the details of the properties, and then make an informed decision. Aseel introdu
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=0.65\textwidth]{images/Interface-of-the Stake Platform.png}
-    \caption{Interface of ``The Stake Platform''}
+    \caption{Interface of << The Stake Platform >>}
     \label{fig:stake-platform}
 \end{figure}
 
