--- a/chapter5.tex
+++ b/chapter5.tex
@@ -147,7 +147,7 @@ Several third-party payment providers are available in Tunisia, including  \text
   
   \item \textbf{User Experience:} Provides a minimalistic and intuitive user interface that reduces drop-off rates during transactions.
   
-  \item \textbf{Flexibility:} Highly flexible and easily integrates into diverse use cases, adapting to the needs of individual investors.
+  \item \textbf{Flexibility:} Highly flexible and easily integrates into diverse use cases, adapting to the requirements of individual investors.
 \end{itemize}
 \newpage
 % Placeholder for Payment Providers Comparison Table
