--- a/rapport.tex
+++ b/rapport.tex
@@ -37,8 +37,8 @@
 \addbibresource{references.bib} % Specify the BibTeX file
 \usepackage{shapepar}
 
-\renewcommand*{\bibleftbracket}{<}
-\renewcommand*{\bibrightbracket}{>}
+% \renewcommand*{\bibleftbracket}{<}
+% \renewcommand*{\bibrightbracket}{>}
 
 % Define a refined professional color palette
 \definecolor{primary}{RGB}{7, 6, 6} % Deep navy blue
